# tt-zephyr-platforms

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Kconfig  LICENSE-DOCS  MAINTAINERS.yml  NOTICE  README.md  STATUS.md  VERSION  tt-console  west.yml
.github/: Dockerfile  boards.json  check-scripts.yml  ci_boards.json  runners.yml  zephyr_setup_ci.yml
app/smc/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  VERSION  debug.conf  pinctrl.conf  pinctrl.overlay  prj.conf  prj_bl2.conf  prj_mcuboot.conf  recovery.conf  sample.yaml  sysbuild.cmake  sysbuild.conf  sysbuild_bl2.conf  sysbuild_mcuboot.conf  tracing.conf  tracing.overlay  uart.overlay  vuart.overlay
app/smc/boards/: tt_blackhole_smc_csm.dtsi  tt_blackhole_smc_partitions.dtsi  tt_blackhole_tt_blackhole_smc.overlay  tt_blackhole_tt_blackhole_smc_bl2.overlay  tt_blackhole_tt_blackhole_smc_i2c_shell.overlay  tt_blackhole_tt_blackhole_smc_mcuboot.overlay
app/smc/mcuboot_module/: mcuboot_hooks.c
app/smc/pytest/: bl2.py  conftest.py  e2e-smoke.py  e2e_smoke.py  e2e_stress.py  pytest.ini  recovery.py  update.py  vuart.py
app/smc/src/: init.c  init.h  main.c
app/smc/sysbuild/: dmc_bl2.conf  dmc_i2c_shell.conf  mcuboot-bl2.conf  mcuboot-bl2_bl2.conf  mcuboot-bl2_bl2.overlay  mcuboot.conf  mcuboot.overlay  recovery_mcuboot.conf
boards/: index.rst
cmake/: board_revision_ifdef.cmake  bootfs_util.cmake  bundle_version.cmake  git_version.cmake
doc/: Doxyfile  Makefile  api.rst  conf.py  index.rst  release.md  requirements.txt  zephyr.rst
drivers/: CMakeLists.txt  Kconfig
drivers/avs/: CMakeLists.txt  Kconfig  Kconfig.tt_avs  tt_avs.c
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.tt_bh  Kconfig.tt_gr  Kconfig.tt_grendel  clock_control_tt_bh.c  clock_control_tt_grendel.c
drivers/console/: CMakeLists.txt  Kconfig  tt_virt_console.c
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.arc  Kconfig.arc_hs  Kconfig.tt_bh  Kconfig.tt_grendel  dma_arc_hs.c  dma_arc_hs_cluster.c  dma_arc_hs_cluster.h  dma_tt_bh_noc.c  dma_tt_grendel_smc.c  tt_bh_arc_dma.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.mspi  flash_mspi_nor.c  flash_mspi_nor_devs.c  flash_stm32_wrapper.c  spi_dw_flash.c  spi_dw_flash.h
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.tt_bh  Kconfig.tt_gr  gpio_tt_bh.c  gpio_tt_grendel.c  grendel_gpio.c
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.tt_bh  i2c_tt_bh.c  tt_stm32_i2c.c  tt_stm32_i2c.h  tt_stm32_i2c_byte_poll_api.c  tt_stm32_i2c_int_api.c  tt_stm32_i2c_poll_api.c
drivers/ina228/: CMakeLists.txt  Kconfig  ina228.c
drivers/jtag/: CMakeLists.txt  Kconfig  jtag_bitbang.c  jtag_emul.c  jtag_ll_pin.h  jtag_profile_functions.h  jtag_shell.c
drivers/mbox/: CMakeLists.txt  Kconfig  Kconfig.tt_gr  mbox_tt_grendel.c
drivers/memc/: CMakeLists.txt  Kconfig  Kconfig.tt_bh  Kconfig.tt_bh_ddr  memc_tt_bh.c  memc_tt_bh_ddr.c
drivers/mfd/: CMakeLists.txt  Kconfig  Kconfig.max6639  mfd_max6639.c
drivers/misc/: CMakeLists.txt  Kconfig
drivers/misc/bh_fwtable/: CMakeLists.txt  Kconfig  bh_fwtable.c
drivers/misc/bh_fwtable/spirom_protobufs/: fw_table.proto
drivers/misc/tt_smc_remoteproc/: CMakeLists.txt  Kconfig  tt_smc_remoteproc.c
drivers/mspi/: Kconfig.dw  mspi_dw.c  mspi_dw.h
drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.tt_bh  pinctrl_stub.c  pinctrl_tt_bh.c
drivers/pll/: CMakeLists.txt  Kconfig  Kconfig.tt_bh  pll_tt_bh.c
drivers/pwm/: CMakeLists.txt  Kconfig  Kconfig.max6639  pwm_max6639.c
drivers/reset/: CMakeLists.txt  Kconfig  Kconfig.tt_bh  reset_tt_bh.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/maxim/: CMakeLists.txt  Kconfig
drivers/sensor/maxim/max6639/: CMakeLists.txt  Kconfig  max6639.c
drivers/sensor/pvt/: CMakeLists.txt  Kconfig  Kconfig.tt_bh  pvt_tt_bh.c
drivers/sensor/tenstorrent/: CMakeLists.txt  Kconfig  pvt_tt_bh.c  pvt_tt_bh_decoder.c  pvt_tt_bh_rtio.c
drivers/sensor/tenstorrent/pvt/: CMakeLists.txt  Kconfig  pvt_tt_bh.c  pvt_tt_bh_decoder.c  pvt_tt_bh_rtio.c
drivers/sensor/ti/: Kconfig
drivers/sensor/ti/ina228/: ina228.c
drivers/sensors/: CMakeLists.txt  Kconfig
drivers/sensors/ti/ina228/: CMakeLists.txt  Kconfig  ina228.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.tt_virt  uart_tt_virt.c
drivers/smbus/: CMakeLists.txt  Kconfig  tt_smbus.c
drivers/smbus_target/: CMakeLists.txt  Kconfig  Kconfig.smbus_target  smbus_target.c
drivers/tenstorrent/: CMakeLists.txt  Kconfig
drivers/tenstorrent/fuse/: CMakeLists.txt  Kconfig
drivers/tenstorrent/fuse/blackhole/: CMakeLists.txt  efuse.c  functional_efuse.c
drivers/tenstorrent/timer/: CMakeLists.txt  Kconfig
drivers/tenstorrent/timer/blackhole/: CMakeLists.txt  timer.c
drivers/watchdog/: CMakeLists.txt  Kconfig  Kconfig.tt_bh  wdt_tt_bh.c
lib/: CMakeLists.txt  Kconfig
scripts/: board_metadata.yaml  bootstrap-env.sh  build-preflash.sh  (+58 more)
scripts/tooling/blackhole_recovery/data/bh_flm/: CMakeLists.txt  FlashDev.c  Keil.STM32G0xx_DFP.2.0.0.pack  README.md  STM32G0Bx_SPI_EEPROM.FLM  build-flm.sh  eeprom.c  pyocd_config.py  pyocd_config_spi1.py  pyocd_config_spi_combo.py  pyocd_shared.py  setup.sh  stm32_spi_hal.c
scripts/tooling/blackhole_recovery/data/wh_flm/: CMakeLists.txt  FlashDev.c  FlashOS.h  FlashPrg.c  README.md  build-flm.sh  eeprom.c  eeprom.h  pyocd_config_spi1.py  pyocd_config_spi2.py  pyocd_shared.py  stm32_spi_hal.c
scripts/tooling/tt_update_tensix_disable_count/: README.md  build-package.sh  pyproject.toml
scripts/tt-console/: .gitignore  Makefile.am  arc_jtag.c  arc_jtag.h  arc_tlb.c  arc_tlb.h  attrs.x  autogen.sh  build.sh  configure.ac  console.c  read-vuart.py  test.c
tests/lib/tenstorrent/bh_arc/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  testcase.yaml
tests/lib/tenstorrent/bh_arc/boards/: native_sim.conf  native_sim.overlay
tests/lib/tenstorrent/bh_arc/src/: aiclk_ppm.c  fan_ctrl.c  fpu.c  gddr.c  main.c  msgqueue.c  reg_mock.c  reg_mock.h  smbus_target.c
tests/lib/tenstorrent/msgqueue/: CMakeLists.txt  testcase.yaml
tests/lib/tenstorrent/msgqueue/src/: main.c
(+904 files in other folders)
