[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-update-tensix-disable-count"
version = "0.0.2"
description = "Update Tensix column disable count in firmware bundle"
authors = [
    {name = "Daniel DeGrasse", email = "ddegrasse@tenstorrent.com"}
]
license = "Apache-2.0"
requires-python = ">=3.9"
readme = "README.md"

dependencies = [
    "pykwalify",
    "pyyaml",
    "intelhex",
    "imgtool",
    "protobuf>=3.19.0",
]

[project.urls]
"Homepage" = "https://github.com/tenstorrent/tt-zephyr-platforms"
"Bug Reports" = "https://github.com/tenstorrent/tt-zephyr-platforms/issues"
"Source" = "https://github.com/tenstorrent/tt-zephyr-platforms/tree/main/scripts/tooling/tt_update_tensix_disable_count"

[project.scripts]
tt-update-tensix-disable-count = "tt_update_tensix_disable_count.update_tensix_disable_count:main"

[tool.setuptools]
include-package-data = true
packages = ["tt_update_tensix_disable_count"]


[tool.setuptools.package-data]
"tt_update_tensix_disable_count" = ["*.proto"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
